Update downcall generator; added MemoryStack